Bug 60499 - doesn't escape private D-Bus socket path if necessary
Summary: doesn't escape private D-Bus socket path if necessary
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2013-02-08 15:34 UTC by Simon McVittie
Modified: 2013-03-06 16:24 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Escape environment-based D-Bus addresses properly (1.93 KB, patch)
2013-02-08 15:34 UTC, Simon McVittie
Details | Splinter Review

Description Simon McVittie 2013-02-08 15:34:03 UTC
Created attachment 74434 [details] [review]
Escape environment-based D-Bus addresses properly

If XDG_RUNTIME_DIR contains a character like ":" (for instance if it's
formed from an X11 display name), then it isn't valid to substitute
it into a D-Bus address without escaping.

---

Version: systemd 197 (still appears to be valid in current git master)
Comment 1 Lennart Poettering 2013-03-06 16:24:29 UTC
Thanks! Applied!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.